universal links test

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world!
+<html>
+  <head>
+    <title>Test</title>
+  </head>
+  <body>
+    <a href="https://wmigor.github.io/game">Game</a>
+  </body>
+</html>
