universal links test

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <a href="https://wmigor.github.io/game">Game</a>
+    <a href="https://wmigor.github.io/game/rr">RR</a>
   </body>
 </html>
