universal links test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Test</title>
   </head>
   <body>
-    <a href="https://wmigor.github.io/game">Game</a>
+    <a href="https://wmigor.github.io/game">Game</a><br>
     <a href="https://wmigor.github.io/game/rr">RR</a>
   </body>
 </html>
