--- a/universal.html
+++ b/universal.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
     <title>Game</title>
   </head>
   <body>
