--- a/universal.html
+++ b/universal.html
@@ -1,7 +1,17 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
     <title>Game</title>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script>
+        $(document).ready(function (){
+            if(navigator.userAgent.toLowerCase().indexOf("android") > -1){
+                window.location.href = 'http://play.google.com/store/apps/details?id=com.my.defense';
+            }
+            if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
+                window.location.href = 'http://itunes.apple.com/lb/app/truecaller-caller-id-number/id448142450?mt=8';
+            }
+        });
+    </script>
   </head>
   <body>
     <a href="https://wmigor.github.io">Back</a>
