--- a/universal.html
+++ b/universal.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Game</title>
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script>
         $(document).ready(function (){
             if(navigator.userAgent.toLowerCase().indexOf("android") > -1){
