--- a/universal.html
+++ b/universal.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <title>Game</title>
     <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script>
         $(document).ready(function (){
@@ -8,12 +7,11 @@
                 window.location.href = 'http://play.google.com/store/apps/details?id=com.my.defense';
             }
             if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
-                window.location.href = 'http://itunes.apple.com/lb/app/truecaller-caller-id-number/id448142450?mt=8';
+                window.location.href = 'https://apps.apple.com/us/app/rush-royale-tower-defense-td/id1526121033';
             }
         });
     </script>
   </head>
   <body>
-    <a href="https://wmigor.github.io">Back</a>
   </body>
 </html>
