universal links test

--- a/universal.html
+++ b/universal.html
@@ -4,7 +4,7 @@
     <script>
         $(document).ready(function (){
             if(navigator.userAgent.toLowerCase().indexOf("android") > -1){
-                window.location.href = 'http://play.google.com/store/apps/details?id=com.my.defense';
+                window.location.href = 'https://play.google.com/store/apps/details?id=com.my.defense';
             }
             if(navigator.userAgent.toLowerCase().indexOf("iphone") > -1){
                 window.location.href = 'https://apps.apple.com/us/app/rush-royale-tower-defense-td/id1526121033';
